force-app/main/default/objects/Order/fields/RegistrationApprovalNote__c.field-meta.xml
<CustomField>
    <fullName>RegistrationApprovalNote__c</fullName>
    <description>Campo que armazena as famílias de produtos que estão sem desconto de banda cadastrado.</description>
    <inlineHelpText>Campo que armazena as famílias de produtos que estão sem desconto de banda cadastrado.</inlineHelpText>
    <label>Observação Aprovação Cadastral</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>