force-app/main/default/objects/Order/fields/RTV__c.field-meta.xml
<CustomField>
    <fullName>RTV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RTVOrders</relationshipName>
    <type>Lookup</type>
</CustomField>