force-app/main/default/objects/Order/fields/SalesCondition__c.field-meta.xml
<CustomField>
    <fullName>SalesCondition__c</fullName>
    <label>Condição de venda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Verão</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Safrinha</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Inverno</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>HFF Verão</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>HFF Inverno</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Pecuária</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Café</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Maq. E Impl.</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Campanha Verão</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Campanha Safrinha</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Campanha Inverno</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Campanha HFF Verão</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Campanha HFF Inverno</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Campanha Pecuária</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Venda Intercompany</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Blitz Agrichem_CN</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Venda a vista</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Venda Dolar</label>
            </value>
            <value>
                <fullName>24</fullName>
                <isActive>true</isActive>
                <label>Bonificação</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Baixo Giro</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>MarketPlace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>