force-app/main/default/objects/Order/fields/SalesConditionObject__c.field-meta.xml
<CustomField>
    <fullName>SalesConditionObject__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Condição de venda</label>
    <referenceTo>SalesCondition__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>SalesCondition</relationshipName>
    <type>Lookup</type>
</CustomField>