force-app/main/default/objects/Order/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipe de Vendas</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>