force-app/main/default/objects/Order/fields/SendToActualApprover__c.field-meta.xml
<CustomField>
    <fullName>SendToActualApprover__c</fullName>
    <label>Data de Envio pra Aprovador Atual</label>
    <type>DateTime</type>
</CustomField>