force-app/main/default/objects/Order/fields/ShippingCrop__c.field-meta.xml
<CustomField>
    <fullName>ShippingCrop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra de Entrega da Commodity</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Pedidos (Safra de Entrega do Grão)</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>