force-app/main/default/objects/Order/fields/StatusPath__c.field-meta.xml
<CustomField>
    <fullName>StatusPath__c</fullName>
    <label>Status Caminho</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Em digitação</fullName>
                <default>true</default>
                <label>Em digitação</label>
            </value>
            <value>
                <fullName>Retorna RTV</fullName>
            </value>
            <value>
                <fullName>Em aprovação grãos</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Aguardando retorno da integração</fullName>
            </value>
            <value>
                <fullName>Aguardando Contrato de grãos SAP</fullName>
            </value>
            <value>
                <fullName>Aguardando Contrato de Insumos SAP</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Em análise de Crédito</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Crédito Bloqueado</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Crédito Liberado</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Faturado Parcial</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>