force-app/main/default/objects/Order/fields/StatusPathLabel__c.field-meta.xml
<CustomField>
    <fullName>StatusPathLabel__c</fullName>
    <formula>IF(ISPICKVAL(StatusPath__c, '1'), 'Em análise de Crédito', (
                IF(ISPICKVAL(StatusPath__c, '2'), 'Crédito Bloqueado', (
                    IF(ISPICKVAL(StatusPath__c, '3'), 'Crédito Liberado', (
                        IF(ISPICKVAL(StatusPath__c, '4'), 'Faturado Parcial', (
                            IF(ISPICKVAL(StatusPath__c, '5'), 'Concluído', (
                                IF(ISPICKVAL(StatusPath__c, 'X'), 'Cancelado', TEXT(StatusPath__c))
                            ))
                        ))
                    ))
                ))
              ))    </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Path Label</label>
    <type>Text</type>
</CustomField>