force-app/main/default/objects/Order/fields/StatusSAP__c.field-meta.xml
<CustomField>
    <fullName>StatusSAP__c</fullName>
    <label>StatusSAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Em análise de Crédito</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Crédito Bloqueado</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Crédito Liberado</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Faturado Parcial</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>