force-app/main/default/objects/Order/fields/StatusSF__c.field-meta.xml
<CustomField>
    <fullName>StatusSF__c</fullName>
    <label>Status SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em digitação</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
            <value>
                <fullName>Retorna RTV</fullName>
            </value>
            <value>
                <fullName>Em aprovação grãos</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>