force-app/main/default/objects/Order/fields/StrikePrice__c.field-meta.xml
<CustomField>
    <fullName>StrikePrice__c</fullName>
    <label>Preço Strike</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>