force-app/main/default/objects/Order/fields/SubmitGrainTableApproval__c.field-meta.xml
<CustomField>
    <fullName>SubmitGrainTableApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Aprovação Mesa de Grãos</label>
    <type>Checkbox</type>
</CustomField>