force-app/main/default/objects/Order/fields/TimeInApproval__c.field-meta.xml
<CustomField>
    <fullName>TimeInApproval__c</fullName>
    <formula>(NOW() - SendToActualApprover__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Parado em Aprovação (Horas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>