force-app/main/default/objects/Order/fields/TimeInApprovalMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeInApprovalMinutes__c</fullName>
    <formula>TimeInApproval__c*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Parado em Aprovação (Minutos)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>