force-app/main/default/objects/Order/fields/TotalAmountWithFreight__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountWithFreight__c</fullName>
    <label>Valor Total do Pedido</label>
    <summarizedField>OrderItem.TotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.DeletedSAP__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>