force-app/main/default/objects/Order/fields/TotalBilledAndToBill__c.field-meta.xml
<CustomField>
    <fullName>TotalBilledAndToBill__c</fullName>
    <formula>TotalBilledValue__c + TotalValueToBill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Faturado e a Faturar</label>
    <type>Number</type>
    <scale>2</scale>
    <precision>16</precision>
</CustomField>