force-app/main/default/objects/Order/fields/TotalBilledValue__c.field-meta.xml
<CustomField>
    <fullName>TotalBilledValue__c</fullName>
    <label>Valor Total Faturado</label>
    <summarizedField>OrderItem.TotalBilledValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>