force-app/main/default/objects/Order/fields/TotalDeliveryQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalDeliveryQuantity__c</fullName>
    <formula>TEXT (CEILING(TotalAmount / UnitPrice__c)) &amp;&quot; &quot;&amp;  TEXT (CommercialMeasureUnit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Total de Entrega (INATIVO)</label>
    <type>Text</type>
</CustomField>