force-app/main/default/objects/Order/fields/TotalFreightValue__c.field-meta.xml
<CustomField>
    <fullName>TotalFreightValue__c</fullName>
    <label>Valor Total do Frete</label>
    <summarizedField>OrderItem.FreightValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>