force-app/main/default/objects/Order/fields/TotalRefuseValue__c.field-meta.xml
<CustomField>
    <fullName>TotalRefuseValue__c</fullName>
    <label>Valor Total Recusado</label>
    <summarizedField>OrderItem.TotalRefuseValue__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>