force-app/main/default/objects/Order/fields/TotalValueToBill__c.field-meta.xml
<CustomField>
    <fullName>TotalValueToBill__c</fullName>
    <label>Valor Total á faturar</label>
    <summarizedField>OrderItem.TotalValueToBill__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>