force-app/main/default/objects/Order/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Trade)</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>