force-app/main/default/objects/Order/fields/TradeSlipCode__c.field-meta.xml
<CustomField>
    <fullName>TradeSlipCode__c</fullName>
    <externalId>true</externalId>
    <label>Código da Trade Slip</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>