force-app/main/default/objects/Order/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>Valor Commodity Líquido</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>