force-app/main/default/objects/Order/recordTypes/AccountOrder.recordType-meta.xml
<RecordType>
    <fullName>AccountOrder</fullName>
    <active>true</active>
    <description>Tipo de registro do Pedido Conta e Ordem</description>
    <label>Conta e Ordem</label>
</RecordType>