force-app/main/default/objects/Order/recordTypes/BarterSale.recordType-meta.xml
<RecordType>
    <fullName>BarterSale</fullName>
    <active>true</active>
    <description>Indica se o pedido é uma venda de barter</description>
    <label>Negociação Barter</label>
</RecordType>