force-app/main/default/objects/Order/recordTypes/Bonification.recordType-meta.xml
<RecordType>
    <fullName>Bonification</fullName>
    <active>true</active>
    <label>Bonificação</label>
</RecordType>