force-app/main/default/objects/Order/recordTypes/CurrencySale.recordType-meta.xml
<RecordType>
    <fullName>CurrencySale</fullName>
    <active>true</active>
    <description>Indica se o pedido é venda normal</description>
    <label>Venda Moeda</label>
</RecordType>