force-app/main/default/objects/Order/recordTypes/ExchangeSale.recordType-meta.xml
<RecordType>
    <fullName>ExchangeSale</fullName>
    <active>true</active>
    <description>Indica se o pedido é venda troca e permuta</description>
    <label>Venda Troca e Permuta</label>
</RecordType>