force-app/main/default/objects/Order/recordTypes/FutureSale.recordType-meta.xml
<RecordType>
    <fullName>FutureSale</fullName>
    <active>true</active>
    <label>Venda Futura</label>
</RecordType>