force-app/main/default/objects/Order/recordTypes/IndustryBonification.recordType-meta.xml
<RecordType>
    <fullName>IndustryBonification</fullName>
    <active>true</active>
    <label>Bonificação origem Industria</label>
</RecordType>