force-app/main/default/objects/Order/recordTypes/ZCCO.recordType-meta.xml
<RecordType>
    <fullName>ZCCO</fullName>
    <active>true</active>
    <label>Contrato Conta e Ordem</label>
</RecordType>