force-app/main/default/objects/Order/recordTypes/ZCEF.recordType-meta.xml
<RecordType>
    <fullName>ZCEF</fullName>
    <active>true</active>
    <label>Contrato Venda Futura</label>
</RecordType>