force-app/main/default/objects/Order/recordTypes/ZCNO.recordType-meta.xml
<RecordType>
    <fullName>ZCNO</fullName>
    <active>true</active>
    <label>Contrato Venda Moeda</label>
</RecordType>