force-app/main/default/objects/Order/recordTypes/ZVTF.recordType-meta.xml
<RecordType>
    <fullName>ZVTF</fullName>
    <active>true</active>
    <description>Indica se o pedido é Venda Triangulada</description>
    <label>Venda Triangulada</label>
</RecordType>