force-app/main/default/objects/Order/recordTypes/ZVTR.recordType-meta.xml
<RecordType>
    <fullName>ZVTR</fullName>
    <active>true</active>
    <description>Indica se o pedido é uma venda de barter</description>
    <label>Venda Barter</label>
</RecordType>