force-app/main/default/objects/Order/recordTypes/ZVTS.recordType-meta.xml
<RecordType>
    <fullName>ZVTS</fullName>
    <active>true</active>
    <description>Indica se o pedido é Remessa Venda Triangulação</description>
    <label>Remessa Venda Triangulação</label>
</RecordType>